--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
